# contextlens

./: CONTEXTLENS.md  LICENSE  README.md  contextlens.yaml  example.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/contextlens/: __init__.py  cli.py  core.py  proxy.py  rule_engine.py  summarizer.py
src/contextlens/mcp/: server.py
tests/: test_core.py  test_proxy.py  test_rule_engine.py
